(fix) text showed up on open gallery - ios may not respect z-index properly, so we move the element based on proper order as well - add translateZ 1px for the real magic?

--- a/components/invitation/style.scss
+++ b/components/invitation/style.scss
@@ -64,6 +64,7 @@
     z-index: 10;
     display: flex;
     align-items: center;
+    transform: translate3d(0,0,1px);
 
     .close-button {
       position: absolute;
